--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -19,6 +19,4 @@ migration:
               - anthem songs.install.data_demo::main
       addons:
         upgrade:
-          - sale
-          - server_environment
-          - base_technical_features
+          - disable_odoo_online
